--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "module": "ddd-steps-list.js",
     "scripts": {
       "start": "web-dev-server",
-      "build": "your-build-command-here",
+      "build": "rimraf public && rollup -c rollup.config.js && npm run analyze",
       "analyze": "cem analyze --litelement --exclude public",
       "release": "npm run build && commit-and-tag-version && git push --follow-tags origin main && npm publish",
       "test": "web-test-runner test/**/*.test.js --coverage --node-resolve",
